# TheGame

./: README.md  init.sh  pyproject.toml  setup.py
docs/source/: conf.py  index.rst
src/: AskIP.py  Client.py  GUIManager.py  Server.py  __init__.py  balloonState.py  bullet.py  client_main.py  constants.py  gameMode.py  geometry.py  nClient.py  nServer.py  networkLibrary.py  overallState.py  playerState.py  server_main.py  tick.py
src/client/: AskIP.py  Client.py  GUIManager.py  Graphics.py  Menu.py  ScoreBoard.py  __init__.py  __main__.py  network.py
src/common/: balloonState.py  bullet.py  constants.py  gameMode.py  geometry.py  networkLibrary.py  overallState.py  playerState.py  tick.py
src/server/: Server.py  __main__.py  network.py
