[build-system]
requires = ["setuptools>=61.0","tk>=0.1.0","pillow>=9.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "BubbleShoota"
version = "0.0.1"
authors = [
  { name="Aditya Mohan Mishra", email="me1180582@iitd.ac.in"},
  {name="Harsh Wardhan", email="ee3180610@iitd.ac.in"},
  {name="Pushpit Srivastava", email="bb1180031@iitd.ac.in" },
]
description = "A game of Bubble Shoota"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Atheriz-46/TheGame"
"Bug Tracker" = "https://github.com/Atheriz-46/TheGame/issues"